feat: 로그아웃까지의 회원기능 추가